syntax = "proto3";

package domain.v1;
option go_package = "internal/domain/pb";

import "google/protobuf/timestamp.proto";

enum SourceType {
  UNDEFINED_SOURCE_TYPE = 0;
  WEB_SOURCE = 1;
  SINGLE_FILE = 2;
  ARCHIVED_FILES = 3;
  WITH_CREDENTIALS = 4;
};

message Source {
  string title = 1;
  bytes content = 2;
  SourceType typ = 3;
  optional UpdateParams updateParams = 4;
  optional bytes credentials = 5;
};

message UpdateParams {
  int64 everyPeriod = 1;
  google.protobuf.Timestamp onTime = 2;
};

message CreateSourceRequest {
  int64 userId = 1;
  Source source = 2;
};

message CreateSourceResponse {
  int64 sourceId = 1;
};

message GetSourceRequest {
  int64 userId = 1;
  int64 sourceId = 2;
};

message GetSourceResponse {
  Source source = 1;
};

message UpdateSourceRequest {
  int64 userId = 1;
  int64 sourceId = 2;
  optional string title = 3;
  optional bytes content = 4;
  optional UpdateParams updateParams = 5;
  optional bytes credentials = 6;
};

message DeleteSourceRequest {
  int64 userId = 1;
  int64 sourceId = 2;
};

message ListSourcesRequest {
  int64 userId = 1;
};

message ListSourcesResponse {
  repeated Source sources = 1;
};
